<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layerType="software"
    android:orientation="vertical"
    android:padding="10dp">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/vote_mood_question"
        android:textSize="20dp" />

    <ImageButton
        android:id="@+id/happyImageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:src="@drawable/green_smile"/>

    <ImageButton
        android:id="@+id/sadImageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="true"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:src="@drawable/red_smile"/>

    <Button
        android:id="@+id/b_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/vote_bt_result_page" />

    <Button
        android:id="@+id/b_get_submission_id_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/vote_bt_get_submission_id_again" />

</LinearLayout>